--- a/templates/actor/npc/header.hbs
+++ b/templates/actor/npc/header.hbs
@@ -97,21 +97,21 @@
         <div class="ability grid-span-1 flexrow">
           <div class='resource-label rollable' data-action='rollNPCMorale'
             data-label="{{localize 'SDM.Morale'}}">
-            <div>{{localize 'SDM.RollType' type=(localize 'SDM.Morale')}} <i class="fas fa-person-running rust"></i></div>
+            <div>{{localize 'SDM.RollType' type=(localize 'SDM.Morale')}} <i class="fa-solid fa-person-running rust"></i></div>
           </div>
         </div>
 
         <div class="ability grid-span-1 flexrow">
           <div class='resource-label rollable' data-type='attack' data-action='roll' data-attack="melee"
             data-label="{{localize 'SDM.Attack'}}">
-            <div>{{localize 'SDM.RollType' type=(localize 'SDM.Attack')}} <i class="fas fa-swords lime"></i></div>
+            <div>{{localize 'SDM.RollType' type=(localize 'SDM.Attack')}} <i class="fa-solid fa-swords lime"></i></div>
           </div>
         </div>
 
         <div class="ability grid-span-1 flexrow">
           <div class='resource-label rollable' data-action='rollNPCDamage'
             data-label="{{localize 'SDM.Damage'}}">
-            <div>{{localize 'SDM.RollType' type=(localize 'SDM.Damage')}} <i class="fas fa-explosion azure"></i></div>
+            <div>{{localize 'SDM.RollType' type=(localize 'SDM.Damage')}} <i class="fa-solid fa-explosion azure"></i></div>
           </div>
         </div>
         {{/if}}
