--- a/templates/actor/trait.hbs
+++ b/templates/actor/trait.hbs
@@ -35,14 +35,14 @@
       data-tooltip='{{localize "DOCUMENT.Update" type=(localize 'TYPE.Trait')}}'
       data-action='viewDoc'
     >
-      <i class='fas fa-edit'></i>
+      <i class='fa-solid fa-edit'></i>
     </a>
       <a
         class='item-control item-delete'
         data-tooltip='{{localize "DOCUMENT.Delete" type=(localize 'TYPE.Trait')}}'
         data-action='deleteDoc'
       >
-        <i class='fas fa-trash'></i>
+        <i class='fa-solid fa-trash'></i>
       </a>
     {{/if}}
   </div>
