--- a/templates/item/power_container.hbs
+++ b/templates/item/power_container.hbs
@@ -29,7 +29,7 @@
               {{localize 'SDM.DeletePower'}}
             </label>
             <div class='resource-content'>
-              <i class="fas fa-trash"></i>
+              <i class="fa-solid fa-trash"></i>
             </div>
           </div>
 
@@ -145,7 +145,7 @@
     {{/each}}
   {{else}}
     <div class="no-powers">
-      <p>{{localize "SDM.NoPowers"}} <i class="fas fa-spider-web"></i></p>
+      <p>{{localize "SDM.NoPowers"}} <i class="fa-solid fa-spider-web"></i></p>
     </div>
   {{/if}}
 </div>
