--- a/src/scss/global/_window.scss
+++ b/src/scss/global/_window.scss
@@ -219,61 +219,65 @@ input[type="checkbox"]::before, input[type="radio"]::before, input[type="checkbo
   color: colors.$c-not-readied;
 }
 
-section.tab.features {
-  scrollbar-color: colors.$c-ultraviolet !important;
-}
+@layer window-layer {
 
-.sheet-tabs {
-  a {
-    &:not(.active) {
-      &:hover {
-        text-shadow: 0 0 8px colors.$c-ultraviolet;
+  * {
+    scrollbar-color: colors.$c-plum transparent;
+  }
+
+  .sheet-tabs {
+    a {
+      &:not(.active) {
+        &:hover {
+          text-shadow: 0 0 8px colors.$c-ultraviolet;
+        }
       }
-    }
 
-    &.active {
-      text-shadow: 0 0 10px colors.$c-ultraviolet;
-    }
-
-  }
-}
-
-.item-controls {
-  a {
-    &:not(.active) {
-      &:hover {
-        text-shadow: 0 0 8px colors.$c-ultraviolet;
+      &.active {
+        text-shadow: 0 0 10px colors.$c-ultraviolet;
       }
+
     }
+  }
 
-    &.active {
-      text-shadow: 0 0 10px colors.$c-ultraviolet;
+  .item-controls {
+    a {
+      &:not(.active) {
+        &:hover {
+          text-shadow: 0 0 8px colors.$c-ultraviolet;
+        }
+      }
+
+      &.active {
+        text-shadow: 0 0 10px colors.$c-ultraviolet;
+      }
+
     }
-
   }
-}
 
-.items-list .item:nth-child(even) {
-  background-color: rgba(0, 0, 0, 0.02); /* Light gray for even items */
-}
-
-.items-list .item:nth-child(odd) {
-  background-color: rgba(0, 0, 0, 0.05); /* Slightly darker for odd items */
-}
-
-.theme-dark .items-list .item:nth-child(even) {
-  background-color: rgba(255, 255, 255, 0.02) !important;
-}
-
-.theme-dark .items-list .item:nth-child(odd) {
-  background-color: rgba(255, 255, 255, 0.05) !important;
-}
-
-span.system-info {
-  a.notification-pip {
-    right: -15px !important;
-    top: 2px !important;
-    background: unset !important;
-    text-shadow: unset !important;
+  .items-list .item:nth-child(even) {
+    background-color: rgba(0, 0, 0, 0.02); /* Light gray for even items */
   }
+
+  .items-list .item:nth-child(odd) {
+    background-color: rgba(0, 0, 0, 0.05); /* Slightly darker for odd items */
+  }
+
+  .theme-dark .items-list .item:nth-child(even) {
+    background-color: rgba(255, 255, 255, 0.02);
+  }
+
+  .theme-dark .items-list .item:nth-child(odd) {
+    background-color: rgba(255, 255, 255, 0.05);
+  }
+
+  span.system-info {
+    a.notification-pip {
+      right: -15px;
+      top: 2px;
+      background: unset;
+      text-shadow: unset;
+    }
+  }
+
 }
