--- a/templates/actor/burdens.hbs
+++ b/templates/actor/burdens.hbs
@@ -9,10 +9,10 @@
       </div>
       <div class='item-controls'>
         {{#if @root.editable}}
-        <a class='item-control item-create' data-tooltip="{{localize 'DOCUMENT.Create' type=(localize 'TYPE.Burden')}}"
+        <a class='item-control item-create' data-tooltip="{{localize 'SDM.DOCUMENT.Create' type=(localize 'TYPE.Burden')}}"
           data-action='createDoc' data-document-class='Item' data-type='burden'>
-          <i class='fas fa-plus'></i>
-          {{localize 'DOCUMENT.New' type=(localize 'TYPE.Burden' )}}
+          <i class='fa-solid fa-plus'></i>
+          {{localize 'SDM.DOCUMENT.New' type=(localize 'TYPE.Burden' )}}
         </a>
         {{/if}}
       </div>
@@ -36,11 +36,11 @@
             {{#if @root.editable}}
             <a class='item-control item-edit' data-tooltip='{{localize "DOCUMENT.Update" type=(localize (lookup @root.config.itemType burden.type))}}'
               data-action='viewDoc'>
-              <i class='fas fa-edit'></i>
+              <i class='fa-solid fa-edit'></i>
             </a>
             <a class='item-control item-delete' data-tooltip='{{localize "DOCUMENT.Delete" type=(localize (lookup @root.config.itemType burden.type))}}'
               data-action='deleteDoc'>
-              <i class='fas fa-trash'></i>
+              <i class='fa-solid fa-trash'></i>
             </a>
             {{/if}}
           </div>
