--- a/templates/actor/item.hbs
+++ b/templates/actor/item.hbs
@@ -117,7 +117,7 @@
       type=(localize "TYPE.Item")}}'
       data-action='viewDoc'
     >
-      <i class='fas fa-edit'></i>
+      <i class='fa-solid fa-edit'></i>
     </a>
 
     <a
@@ -125,7 +125,7 @@
       data-tooltip='{{localize "DOCUMENT.Delete" type=(localize "TYPE.Item")}}'
       data-action='deleteDoc'
     >
-      <i class='fas fa-trash'></i>
+      <i class='fa-solid fa-trash'></i>
     </a>
     {{/if}}
   </div>
