--- a/templates/actor/items.hbs
+++ b/templates/actor/items.hbs
@@ -12,13 +12,13 @@
         {{#if @root.editable}}
         <a
           class='item-control item-create'
-          data-tooltip="{{localize 'DOCUMENT.Create' type=(localize 'TYPE.Item' )}}"
+          data-tooltip="{{localize 'SDM.DOCUMENT.Create' type=(localize 'TYPE.Item' )}}"
           data-action='createDoc'
           data-document-class='Item'
           data-type='gear'
         >
-          <i class='fas fa-plus'></i>
-          {{localize 'DOCUMENT.New' type=(localize 'TYPE.Item' )}}
+          <i class='fa-solid fa-plus'></i>
+          {{localize 'SDM.DOCUMENT.New' type=(localize 'TYPE.Item' )}}
         </a>
         {{/if}}
       </div>
