--- a/templates/actor/spells.hbs
+++ b/templates/actor/spells.hbs
@@ -10,13 +10,13 @@
           {{#if @root.editable}}
             <a
               class='item-control item-create'
-              data-tooltip='{{localize "DOCUMENT.Create" type='Spell'}}'
+              data-tooltip='{{localize "SDM.DOCUMENT.Create" type='Spell'}}'
               data-action='createDoc'
               data-document-class='Item'
               data-type='spell'
               data-system.spell-level='{{spellLevel}}'
             >
-              <i class='fas fa-plus'></i>
+              <i class='fa-solid fa-plus'></i>
               {{localize 'SDM.Item.Spell.AddLVL' level=spellLevel}}
             </a>
           {{/if}}
@@ -36,7 +36,7 @@
           </div>
           <div class='item-controls'>
             <a class='item-control item-edit' data-tooltip='{{localize "DOCUMENT.Update" type='spell'}}' data-action='viewDoc'>
-              <i class='fas fa-edit'></i>
+              <i class='fa-solid fa-edit'></i>
             </a>
             {{#if @root.editable}}
               <a
@@ -44,7 +44,7 @@
                 data-tooltip='{{localize "DOCUMENT.Delete" type='spell'}}'
                 data-action='deleteDoc'
               >
-                <i class='fas fa-trash'></i>
+                <i class='fa-solid fa-trash'></i>
               </a>
             {{/if}}
           </div>
