--- a/templates/actor/traits.hbs
+++ b/templates/actor/traits.hbs
@@ -11,13 +11,13 @@
         {{#if @root.editable}}
         <a
           class='item-control item-create'
-          data-tooltip="{{localize 'DOCUMENT.Create' type=(localize 'TYPE.Trait')}}"
+          data-tooltip="{{localize 'SDM.DOCUMENT.Create' type=(localize 'TYPE.Trait')}}"
           data-action='createDoc'
           data-document-class='Item'
           data-type='trait'
         >
-          <i class='fas fa-plus'></i>
-          {{localize 'DOCUMENT.New' type=(localize 'TYPE.Trait')}}
+          <i class='fa-solid fa-plus'></i>
+          {{localize 'SDM.DOCUMENT.New' type=(localize 'TYPE.Trait')}}
         </a>
         {{/if}}
       </div>
