--- a/templates/item/effects.hbs
+++ b/templates/item/effects.hbs
@@ -14,9 +14,9 @@
         <a class='effect-control' data-action='createDoc' data-document-class='ActiveEffect'
           data-origin="{{@root.item.uuid}}" data-img="icons/svg/aura.svg" {{#if (eq section.type "inactive" )}}
           data-disabled="true" {{else if (eq section.type "temporary" )}} data-duration.rounds="1" {{/if}}
-          data-tooltip='{{localize "DOCUMENT.Create" type=(localize ' TYPE.Effect')}}'>
-          <i class='fas fa-plus'></i>
-          {{localize 'DOCUMENT.New' type=(localize 'TYPE.Effect')}}
+          data-tooltip='{{localize "SDM.DOCUMENT.Create" type=(localize ' TYPE.Effect')}}'>
+          <i class='fa-solid fa-plus'></i>
+          {{localize 'SDM.DOCUMENT.New' type=(localize 'TYPE.Effect')}}
         </a>
       </div>
     </li>
@@ -33,17 +33,17 @@
         <div class='effect-controls effect-controls flexrow'>
           {{#if @root.editable}}
           <a class='effect-control' data-action='toggleEffect' data-tooltip='{{localize "SDM.Effect.Toggle"}}'>
-            <i class='fas {{#if effect.disabled}}fa-check{{else}}fa-times{{/if}}'></i>
+            <i class='fa-solid {{#if effect.disabled}}fa-check{{else}}fa-times{{/if}}'></i>
           </a>
           {{/if}}
           <a class='effect-control' data-action='viewDoc' data-document-class='ActiveEffect'
             data-tooltip='{{localize "DOCUMENT.Update" type=(localize ' TYPE.Effect')}}'>
-            <i class='fas fa-edit'></i>
+            <i class='fa-solid fa-edit'></i>
           </a>
           {{#if @root.editable}}
           <a class='effect-control' data-action='deleteDoc' data-document-class='ActiveEffect'
             data-tooltip='{{localize "DOCUMENT.Delete" type=(localize ' TYPE.Effect')}}'>
-            <i class='fas fa-trash'></i>
+            <i class='fa-solid fa-trash'></i>
           </a>
           {{/if}}
         </div>
