--- a/src/scss/components/_items.scss
+++ b/src/scss/components/_items.scss
@@ -38,7 +38,7 @@
   overflow-y: auto;
   scrollbar-width: thin;
   color: colors.$c-tan;
-  &.power-contaier {
+  &.power-album {
     max-height: 600px;
   }
 
