--- a/templates/item/header.hbs
+++ b/templates/item/header.hbs
@@ -11,4 +11,12 @@
   {{#if (eq item.type 'burden')}}
   {{> ($$ "item/burden/header")}}
   {{/if}}
+
+  {{!-- {{#if (eq item.type 'vehicle')}}
+  {{> ($$ "item/vehicle/header")}}
+  {{/if}}
+
+  {{#if (eq item.type 'vehicle')}}
+    {{> ($$ "item/vehicle/header")}}
+  {{/if}} --}}
 </div>
