--- a/templates/item/power_album.hbs
+++ b/templates/item/power_album.hbs
@@ -1,4 +1,4 @@
-<div class="power-container">
+<div class="power-album">
   <!-- Power Navigation Controls -->
   <!-- Current Power Display -->
   {{#if (gt powerCount 0)}}
