--- a/templates/actor/npc/header.hbs
+++ b/templates/actor/npc/header.hbs
@@ -104,7 +104,7 @@
         <div class="ability grid-span-1 flexrow">
           <div class='resource-label rollable' data-type='attack' data-action='roll' data-attack="melee"
             data-label="{{localize 'SDM.Attack'}}">
-            <div>{{localize 'SDM.RollType' type=(localize 'SDM.Attack')}} <i class="fa-solid fa-swords lime"></i></div>
+            <div>{{localize 'SDM.RollType' type=(localize 'SDM.Attack')}} <i class="fa-solid fa-hand-fist lime"></i></div>
           </div>
         </div>
 
