--- a/templates/item/power_album.hbs
+++ b/templates/item/power_album.hbs
@@ -145,7 +145,7 @@
     {{/each}}
   {{else}}
     <div class="no-powers">
-      <p>{{localize "SDM.NoPowers"}} <i class="fa-solid fa-spider-web"></i></p>
+      <p>{{localize "SDM.NoPowers"}} <i class="fa-solid fa-spider"></i></p>
     </div>
   {{/if}}
 </div>
