--- a/src/scss/global/_window.scss
+++ b/src/scss/global/_window.scss
@@ -225,6 +225,10 @@ input[type="checkbox"]::before, input[type="radio"]::before, input[type="checkbo
     scrollbar-color: colors.$c-plum transparent;
   }
 
+  .changes-key {
+    line-height: inherit;
+  }
+
   .sheet-tabs {
     a {
       &:not(.active) {
