--- a/css/sdm.css
+++ b/css/sdm.css
@@ -156,7 +156,6 @@
 }
 
 .rollable:hover, .rollable:focus {
-  color: var(--sdm-c-black);
   text-shadow: 0 0 10px var(--sdm-c-ultraviolet);
   cursor: pointer;
 }
@@ -316,7 +315,10 @@ hr {
   background-image: linear-gradient(90deg, transparent 0%, var(--sdm-c-font) 60%, transparent 100%);
 }
 
-input[type=checkbox]::before, input[type=radio]::before, input[type=checkbox]::after, input[type=radio]::after {
+input[type=checkbox]::before,
+input[type=radio]::before,
+input[type=checkbox]::after,
+input[type=radio]::after {
   width: var(--checkbox-size);
   height: var(--checkbox-size);
   font-size: var(--checkbox-size);
@@ -325,7 +327,7 @@ input[type=checkbox]::before, input[type=radio]::before, input[type=checkbox]::a
 }
 
 .critical {
-  color: #18520B;
+  color: #18520b;
   font-weight: bold;
 }
 
@@ -340,12 +342,12 @@ input[type=checkbox]::before, input[type=radio]::before, input[type=checkbox]::a
 }
 
 .force {
-  color: #B8860B;
+  color: #b8860b;
   font-weight: bold;
 }
 
 .is13 {
-  color: #B8860B;
+  color: #b8860b;
   filter: sepia(0.5) hue-rotate(0deg);
 }
 
@@ -365,6 +367,127 @@ input[type=checkbox]::before, input[type=radio]::before, input[type=checkbox]::a
 @layer window-layer {
   * {
     scrollbar-color: var(--sdm-c-plum) transparent;
+  }
+  .die-label {
+    display: inline-flex;
+    width: 19px;
+    height: 19px;
+  }
+  .dice-d4 {
+    --dice-image: url("../assets/icons/dice/d4.svg");
+    background-image: var(--dice-image);
+  }
+  .dice-d6 {
+    --dice-image: url("../assets/icons/dice/d6.svg");
+    background-image: var(--dice-image);
+  }
+  .dice-d8 {
+    --dice-image: url("../assets/icons/dice/d8.svg");
+    background-image: var(--dice-image);
+  }
+  .dice-d10 {
+    --dice-image: url("../assets/icons/dice/d10.svg");
+    background-image: var(--dice-image);
+  }
+  .dice-d12 {
+    --dice-image: url("../assets/icons/dice/d12.svg");
+    background-image: var(--dice-image);
+  }
+  .dice-d20 {
+    --dice-image: url("../assets/icons/dice/d20.svg");
+    background-image: var(--dice-image);
+  }
+  button i.die-label {
+    background-image: unset;
+    background-color: var(--button-text-color);
+    -webkit-mask: var(--dice-image) no-repeat center;
+    mask: var(--dice-image) no-repeat center;
+    transition: all 0.5s ease 0s;
+  }
+  button:hover i.die-label {
+    background-color: var(--button-hover-text-color);
+    transition: all 0.5s ease 0s;
+  }
+  .rollable:hover .die-label,
+  .die-label:hover {
+    filter: drop-shadow(0px 0px 5px var(--sdm-c-ultraviolet));
+  }
+  button .melee-attack {
+    transition: all 0.5s ease 0s;
+  }
+  button .die-label {
+    color: var(--button-text-color);
+    transition: all 0.5s ease 0s;
+    color: blue;
+  }
+  button .die-label:hover {
+    color: var(--button-hover-text-color);
+    transition: all 0.5s ease 0s;
+  }
+  button:hover i.melee-attack.rollable,
+  .melee-attack:hover {
+    background-color: var(--button-hover-text-color);
+    transition: all 0.5s ease 0s;
+  }
+  .melee-attack {
+    width: 15px;
+    height: 15px;
+    display: inline-block;
+    background-color: var(--button-text-color);
+    -webkit-mask: url("../assets/icons/equipment/melee-weapons/broadsword.svg") no-repeat center;
+    mask: url("../assets/icons/equipment/melee-weapons/broadsword.svg") no-repeat center;
+  }
+  .melee-attack.lime {
+    width: 16px;
+    height: 16px;
+    display: inline-block;
+    -webkit-mask: unset;
+    mask: unset;
+    background: url("../assets/icons/equipment/melee-weapons/broadsword-lime.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    cursor: pointer;
+  }
+  button:hover i.one-handed,
+  .one-handed:hover {
+    background-color: var(--button-hover-text-color);
+    transition: all 0.5s ease 0s;
+  }
+  .one-handed {
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    background-color: var(--button-text-color);
+    transition: all 0.5s ease 0s;
+    -webkit-mask: url("../assets/icons/attack/one-handed.svg") no-repeat bottom;
+    mask: url("../assets/icons/attack/one-handed.svg") no-repeat bottom;
+  }
+  button:hover i.two-handed,
+  .two-handed:hover {
+    background-color: var(--button-hover-text-color);
+    transition: all 0.5s ease 0s;
+  }
+  .two-handed {
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    background-color: var(--button-text-color);
+    transition: all 0.5s ease 0s;
+    -webkit-mask: url("../assets/icons/attack/two-handed.svg") no-repeat bottom;
+    mask: url("../assets/icons/attack/two-handed.svg") no-repeat bottom;
+  }
+  .npc-attack {
+    display: flex;
+    gap: 3px;
+    align-items: center;
+  }
+  .theme-dark .melee-attack.lime {
+    background: url("../assets/icons/equipment/melee-weapons/broadsword-lime-theme-dark.svg");
+  }
+  .rollable:hover i.melee-attack.lime,
+  .melee-attack.lime:hover {
+    filter: drop-shadow(0px 0px 5px var(--sdm-c-ultraviolet));
   }
   .changes-key {
     line-height: inherit;
@@ -955,7 +1078,7 @@ input[type=checkbox]::before, input[type=radio]::before, input[type=checkbox]::a
   transition: 0.4s;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3);
 }
-.sdm .slider .fa-cog {
+.sdm .slider .fa-gear {
   position: absolute;
   left: 2px;
   bottom: 2px;
@@ -975,7 +1098,7 @@ input[type=checkbox]::before, input[type=radio]::before, input[type=checkbox]::a
 .sdm input:checked + .slider {
   background-color: var(--sdm-c-dark);
 }
-.sdm input:checked + .slider .fa-cog {
+.sdm input:checked + .slider .fa-gear {
   transform: translateX(20px);
   color: var(--sdm-c-dark);
 }
@@ -1299,3 +1422,5 @@ input[type=checkbox]::before, input[type=radio]::before, input[type=checkbox]::a
   top: var(--sdm-top-edit);
   left: var(--sdm-left-edit);
 }
+
+/*# sourceMappingURL=sdm.css.map */
