fix: :bug: Change power album roll icon

--- a/templates/actor/item.hbs
+++ b/templates/actor/item.hbs
@@ -63,7 +63,7 @@
         data-label='{{item.name}}'
         data-tooltip="{{localize 'SDM.RollType' type=(localize 'SDM.PowerAlbum')}}"
       >
-        <i class='fa-solid fa-book-open roll-icon'></i>
+        <i class='fa-solid fa-book roll-icon'></i>
       </div>
       {{/if}}
 
